$Id: History,v 1.3 1999-02-18 15:53:51 johna Exp $
$Name: not supported by cvs2svn $
-------------------------------------------------------------------

     =========================================================
     Geant4 - an Object-Oriented Toolkit for Simulation in HEP
     =========================================================

                      Category History file
                      ---------------------

History file for Geant4 configuration scripts.
It DOES NOT substitute the  CVS log-message one should put at every
committal in the CVS repository !

     ----------------------------------------------------------
     * Reverse chronological order (last date on top), please *
     ----------------------------------------------------------

18th February 1999  John Allison
- Added G4USE_STL flag.

1st January 1999  Gunter Folger
- Add FCLIBS for SUN.

January 29th 1999 - John Allison (config-01-00-01)
- Changed rd44 to sw/geant4.

December 15th, 1998 - G.Cosmo (config-00-04-11)
- Added G4_HAVE_BOOL to DEC-cxx.
- Cosmetic changes.

December 12th, 1998 - J.Allison (config-00-04-10)
- Fixed bug in OGLFLAGS and OGLLIBS user override mechanism.

December 11th, 1998 - J.Allison (config-00-04-09)
- Removed -fnonstd for SUN-CC.

December 10th, 1998 - G.Cosmo (config-00-04-08)
- architecture.gmk: introduced $G4DATA variable which can be user
  defined. Default is set to $G4INSTALL/data.
- architecture.gmk: introduced $G4LEVELGAMMADATA set as default to
  $G4DATA/PhotonEvaporation.
- globlib.gmk: fixed minor bug (courtesy of V.Krylov).

December 10th, 1998 - J.Allison (config-00-04-07)
- architecture.gmk: allowed environment variables OGLFLAGS and OGLLIBS.

December 7th, 1998 - S.Tanaka, G.Cosmo (config-00-04-06)
- architecture.gmk: fixed setting of VISLIBS.

December 7th, 1998 - S.Tanaka 
- Update of architecture.gmk and G4VIS_USE.gmk:
  In SUN-CC, "-L/usr/lib -lsocket -lnsl"  is  moved from X11LIBS to VISLIBS.
